# ==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--
#
# lan-ssh
#
# Copyright (C) 2023  Anonymous
#
#
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# ::--::--::--::--::--::--::--::--::--::--::--::--::--::--::--::--

[package]

publish = false
edition = '2024'

name = 'lan-ssh'
version = '0.3.2'

[dependencies]

blackhole = '>= 0.20.2, < 0.21'
dia-args = '>= 0.60.2, < 0.61'
dia-files = '>= 0.23.2, < 0.24'
dia-ip-range = { version='>= 0.10, < 0.11', features=['iter', 'std'] }
zeros = '>= 17.1, < 18'
